# cginz

./: .gitignore  CMakeLists.txt  main.c  ng_error.h  ng_forward.h  ng_game.c  ng_game.h  ng_list.c  ng_list.h  ng_log.h  ng_types.h
